[package]
name = "game-engine-patterns"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
tokio = { version = "1.3.0", features = ["full"] }
bytes = "1.0.1"
fixed-vec-deque = "0.1.9"
anyhow = "1.0.38"
crossbeam = "0.8.0"
pin-project = "1.0.5"
