[package]
name = "game-engine-patterns"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = "0.1.5"
async-stream = "0.3.1"
bytes = "1.0.1"
fixed-vec-deque = "0.1.9"
anyhow = "1.0.40"
crossbeam = "0.8.0"
pin-project = "1.0.7"
relative-path = "1.4.0"
